--- a/client/src/styles/heading.scss
+++ b/client/src/styles/heading.scss
@@ -1,8 +1,16 @@
 .heading-base {
   font-style: normal;
   font-weight: 600;
-  font-size: 36px;
   line-height: 1.2;
-  margin: 0 0 30px 0;
   padding: 0;
+
+  @include media('min', $viewport-post-md) {
+    font-size: 36px;
+    margin: 0 0 30px 0;
+  }
+  
+  @include media('max', $viewport-md) {
+    font-size: 20px;
+    margin: 0 0 15px 0;
+  }
 }
